Cabal-Version:  3.0
name:           yol-demo
version:        0.1
category:       control
synopsis:       Examples built with yolc (A YulDSL Compiler)
license:        LGPL-3.0-or-later
license-file:   LICENSE
author:         Miao, ZhiCheng
maintainer:     zhicheng.miao@gmail.com
tested-with:    GHC==9.6.2
build-type:     Simple

common yol-module-options
    default-language:     GHC2024
    ghc-options:          -Wall
                          -Wno-name-shadowing
    default-extensions:   LinearTypes
                          BlockArguments
                          OverloadedStrings
                          UnicodeSyntax
                          RebindableSyntax
                          ImplicitPrelude
    mixins:               base hiding (Prelude),
                          base (Prelude as Prelude.Base),
                          yul-dsl-linear-smc (Prelude.YulDSL.LinearSMC as Prelude),
                          yul-dsl-linear-smc
    build-depends:        base >= 4.13 && < 666,
                          text >= 2.0.1,
                          bytestring >= 0.11,
                          yul-dsl,
                          yul-dsl-linear-smc,
                          yol-suite,
                          linear-base >= 0.3.1,
                          linear-smc >= 2.2.3

library
  import:           yol-module-options
  exposed-modules:  Project Basic ERC20
  hs-source-dirs:   src
