Cabal-Version:  3.0
name:           yol-demo
version:        0.1
category:       control
synopsis:       Examples built with yolc (A YulDSL/Haskell Compiler)

license:        MIT
license-file:   LICENSE
author:         Miao, ZhiCheng
maintainer:     hellwolf@yolc.dev
copyright:      (c) 2023-2024 Miao, ZhiCheng

tested-with:    GHC==9.6.2
build-type:     Simple

common yol-module-options
    default-language:     GHC2024
    ghc-options:          -Wall
                          -Wno-name-shadowing
                          -Wno-missing-signatures
    default-extensions:   BlockArguments
                          QualifiedDo
                          OverloadedStrings
                          UnicodeSyntax
                          RebindableSyntax
                          LinearTypes
                          ImpredicativeTypes
    mixins:               base hiding (Prelude),
                          base (Prelude as Prelude.Base)
    build-depends:        base >= 4.13 && < 666,
                          text >= 2.0.1,
                          bytestring >= 0.11,
                          yul-dsl,
                          yul-dsl-linear-smc,
                          yol-suite,
                          linear-base >= 0.3.1,
                          linear-smc >= 2.2.3

library
  import:           yol-module-options
  exposed-modules:  Project Basic ERC20
  hs-source-dirs:   src
