cabal-version:  3.0
name:           eth-abi
version:        0.1.0.0
category:       Data Structures
synopsis:       Ethereum contract ABI specification in Haskell
description:    These include Ethereum contract ABI specification, https://docs.soliditylang.org/en/latest/abi-spec.html
                implemented in Haskell types, their derived types, and dependently typed variants of some.

license:        MIT
license-file:   MIT-LICENSE
author:         Miao, ZhiCheng
maintainer:     helwolf@yolc.dev
copyright:      (c) 2024 Miao, ZhiCheng

-- extra-doc-files:  README.md
-- extra-doc-files:  CHANGELOG.md

tested-with:    GHC==9.10.1
build-type:     Simple

common basic-options
  default-language:   GHC2024
  ghc-options:        -Wall
                      -Wunused-packages
  default-extensions: TypeFamilies
                      RequiredTypeArguments
  build-depends:      base >= 4.20.0.0 && < 666


library internal
  import:     basic-options
  visibility: private
  --
  hs-source-dirs:  internal-src
  exposed-modules: Data.SimpleNP
                   Internal.Data.Type.Bool
                   Internal.Data.Type.List
  build-depends:   ghc-experimental >= 0.1

library
  import:           basic-options
  hs-source-dirs:   src
  exposed-modules:  Ethereum.ContractABI.ABICoreType
                    Ethereum.ContractABI.ABITypeable
                    Ethereum.ContractABI.ABICodec
                    Ethereum.ContractABI.CoreType.NP
                    Ethereum.ContractABI.CoreType.BOOL
                    Ethereum.ContractABI.CoreType.ADDR
                    Ethereum.ContractABI.CoreType.INTx
                    Ethereum.ContractABI.CoreType.BYTESn
                    Ethereum.ContractABI.ABITypeCoercible
                    Ethereum.ContractABI.ExtendedType.TUPLEn
                    Ethereum.ContractABI.ExtendedType.SELECTOR
                    Ethereum.ContractABI.ExtendedType.Maybe
                    Ethereum.ContractABI
  build-depends:    bytestring >= 0.11,
                    template-haskell >= 2.22,
                    crypton >= 0.32,
                    memory >= 0.18,
                    cereal >= 0.5,
                    internal

Test-Suite test-eth-abi
  import:           basic-options
  ghc-options:      -Wno-missing-signatures
  type:             exitcode-stdio-1.0
  build-depends:    QuickCheck >= 2.15,
                    hspec >= 2.11,
                    eth-abi
  hs-source-dirs:   test
  other-modules:    INTx_prop
                    NP_test
  main-is:          Main.hs
