cabal-version:   3.4
name:            yol-suite
version:         0.1.0.0
category:        Development
synopsis:        A collection of YulDSL programs for the new pioneer of Ethereum smart contracts development
description:     YOL stands for *Yet Original Language*. The suite consists of:

                 * yolc "the evil twin of solc": the compiler for YulDSL/Haskell.

                 * attila "who wields the foundry, forges his path": a testing framework using foundry under the hood.

                 * drwitch "who persuades the tyrant, shapes our history": a minimalistic multitool for interacting with
                   EVM smart contracts.

license:         LGPL-3.0-or-later
license-file:    LGPL-3.0-LICENSE
author:          Miao, ZhiCheng
maintainer:      hellwolf@yolc.dev
copyright:       (c) 2023-2024 Miao, ZhiCheng

extra-doc-files: README.md
                 CHANGELOG.md

tested-with:     GHC==9.10.1
build-type:      Simple

common basic-options
  default-language: GHC2024
  ghc-options:      -Wall
                    -Wunused-packages
  build-depends:    base >=4.20.0.0 && < 666

library
  import:           basic-options
  exposed-modules:  YolSuite.TH
                    YolSuite.YOLC.Manifest
                    YolSuite.YOLC.Builder
  -- other-modules:
  -- other-extensions:
  build-depends:    text >= 2.0.1,
                    process >= 1.6.17,
                    template-haskell >= 2.19.0,
                    PyF >= 0.11.1,
                    lens >= 5.2.0,
                    aeson >= 2.2.0,
                    lens-aeson >= 1.2.2,
                    yul-dsl
  hs-source-dirs:   src
