Cabal-Version:  3.0
name:           yul-dsl-linear-smc
version:        0.1.0.0
category:       Language
synopsis:       Embedding YulDSL in Haskell Using Linear Types
description:    YulDSL provides an eDSL called 'YulDSL' for transpiling Haskell code to Solidiy/Yul code.

                Additionally, the package uses a technique called "evaluating linear functions to symmetric monoidal
                categories (Jean-Philippe Bernardy and Arnaud Spiwack)" to provide an ergonomic linear functions
                (nicknamed "lolipop" functions, hence the project name) programming environment for the 'YulDSL'.

                Furthermore, the 'YulDSL' has its portable artifact form (WORK-IN-PROGRESS), which opens the door for
                other frontends (a visual programming interface or other principled programming languages) to produce
                and share 'YulDSL' as portable modules with each other.

license:        LGPL-3.0-or-later
license-file:   LGPL-3.0-LICENSE
author:         Miao, ZhiCheng
maintainer:     hellwolf@yolc.dev
copyright:      (c) 2023-2024 Miao, ZhiCheng

extra-doc-files:  README.md
-- extra-doc-files:  CHANGELOG.md

tested-with:    GHC==9.10.1
build-type:     Simple

common basic-options
  default-language:     GHC2024
  ghc-options:          -Wall
                        -Wunused-packages
  default-extensions:   UnicodeSyntax
                        BlockArguments
                        QualifiedDo
                        NoImplicitPrelude
                        ImpredicativeTypes
                        LinearTypes
  build-depends:        base >= 4.20.0.0 && < 666

library internal
  import:     basic-options
  visibility: private
  --
  hs-source-dirs:  internal-src
  exposed-modules: Data.MPOrd
                   Data.LinearContext
                   Control.LinearlyVersionedMonad
  build-depends:    constraints >= 0.13,
                    deepseq >= 1.5,
                    linear-base >= 0.3.1

library
  import:             basic-options
  default-extensions: TypeFamilies
                      RequiredTypeArguments
  --
  hs-source-dirs:   src
  exposed-modules:    Prelude.YulDSL
                      -- Instances for YulDSL
                      Data.MPOrd.YulDSL
                      Control.Category.Constrained.YulDSL
                      -- Instances for YulDSL's LinearSMC Effect
                      YulDSL.Effects.LinearSMC.YulPort
                      YulDSL.Effects.LinearSMC.YulMonad
                      YulDSL.Effects.LinearSMC.LinearYulCat
                      YulDSL.Effects.LinearSMC.LinearFn
                      YulDSL.Effects.LinearSMC
                      -- Prelude Curation for LinearSMC
                      Data.Num.YulDSL.LinearSMC
  reexported-modules: Control.LinearlyVersionedMonad
  build-depends:    constraints >= 0.13,
                    linear-base >= 0.3.1,
                    linear-smc >= 2.2.3,
                    yul-dsl,
                    internal

Test-Suite test-yul-dsl-linear-smc
  import:           basic-options
  ghc-options:      -Wno-missing-signatures
  --
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  other-modules:    Num_prop
                    LinearFn_prop
  main-is:          Main.hs
  build-depends:    hspec >=2.11,
                    -- QuickCheck >=2.13,
                    yul-dsl-linear-smc
