cabal-version:  3.0
name:           yul-dsl
version:        0.1.0.0
category:       Language
synopsis:       YulDSL, a DSL for Solidity/Yul
description:    YulDSL provides an EDSL called 'YulDSL' for transpiling Haskell code to Solidiy/Yul code.

                Additionally, the package uses a technique called "evaluating linear functions to symmetric monoidal
                categories (Jean-Philippe Berntardy and Arnaud Spiwack)" to provide an ergonomic linear functions
                (nicknamed "lolipop" functions, hence the project name) programming environment for the 'YulDSL'.

                Furthermore, the 'YulDSL' has its portable artifact form (WORK-IN-PROGRESS), which opens the door for
                other frontends (a visual programming interface or other principled programming languages) to produce
                and share 'YulDSL' as portable modules with each other.

license:        LGPL-3.0-or-later
license-file:   LICENSE
author:         Miao, ZhiCheng
maintainer:     zhicheng.miao@gmail.com
copyright:      (c) 2023-2024 Miao, ZhiCheng
tested-with:    GHC==9.10.1
build-type:     Simple
-- extra-doc-files:    CHANGELOG.md

common basic-options
  default-language: GHC2024
  ghc-options:      -Wall
  build-depends:    base >=4.20.0.0 && < 666

library
  import:           basic-options
  hs-source-dirs:   src
  exposed-modules:  Data.NProducts
                    Data.NTuple
                    Data.TypeBools
                    YulDSL.Core.ContractABI.Types
                    YulDSL.Core.ContractABI.Coerce
                    YulDSL.Core.ContractABI
                    YulDSL.Core.YulCat
                    YulDSL.Core.YulObject
                    YulDSL.Core
                    YulDSL.Eval
                    YulDSL.CodeGens.YulGen

  other-modules:    YulDSL.CodeGens.Yul.Internal.CodeFormatters
                    YulDSL.CodeGens.Yul.Internal.CodeGen
                    YulDSL.CodeGens.Yul.Internal.ABICodec
                    YulDSL.CodeGens.Yul.Internal.FunctionGen
                    YulDSL.CodeGens.Yul.Internal.ObjectGen
  build-depends:    bytestring >= 0.11,
                    text >= 2.0.1,
                    constraints >= 0.13,
                    containers >= 0.6.7,
                    mtl >= 2.3.1,
                    crypton >= 0.32,
                    memory >= 0.18.0,
                    -- TODO remove cereal dependency
                    cereal >= 0.5.8

Test-Suite test-yul-dsl
  import:           basic-options
  ghc-options:      -Wno-missing-signatures
  type:             exitcode-stdio-1.0
  build-depends:    QuickCheck >=2.13,
                    hspec >=2.11,
                    yul-dsl
  hs-source-dirs:   test
  other-modules:    Eval_prop
                    TestCommon
                    Types_prop
  main-is:          Main.hs
