cabal-version:  3.0
name:           yul-dsl
version:        0.1.0.0
category:       Language
synopsis:       YulDSL - An EDSL targets Solidity\/Yul
description:    YulDSL provides an embedded domain-specific language (EDSL) called 'YulDSL' in Haskell that targets
                olidiy\/Yul code.

                It is a DSL that bases itself on category theory, which makes it possible to have different front ends
                that all target to YulDSL.

                One such working front end is YulDSL\/Haskell (package: yul-dsl-linear-smc).

                Furthermore, in the future, 'YulDSL' can be serialized into a portable artifact, thereby enabling
                various front ends, such as a visual programming interface or other YulDSL-supported programming
                languages to produce and share 'YulDSL' as portable modules with each other.

license:        LGPL-3.0-or-later
license-file:   LGPL-3.0-LICENSE
author:         Miao, ZhiCheng
maintainer:     helwolf@yolc.dev
copyright:      (c) 2023-2024 Miao, ZhiCheng

extra-doc-files:     README.md
-- extra-doc-files:  CHANGELOG.md

tested-with:    GHC==9.10.1
build-type:     Simple

common basic-options
  default-language:   GHC2024
  default-extensions: OverloadedRecordDot
  ghc-options:        -Wall
                      -Wunused-packages
  build-depends:      base >= 4.20.0.0 && < 666

library
  import:           basic-options
  default-extensions: TypeFamilies
  --
  hs-source-dirs:   src
  exposed-modules:  Control.PatternMatchable
                    Control.IfThenElse
                    YulDSL.Core.YulCatObj
                    YulDSL.Core.YulNum
                    YulDSL.Core.YulCat
                    YulDSL.Core.Fn
                    YulDSL.Core.YulObject
                    YulDSL.Core
                    YulDSL.YulCatObj.Prelude.Base.Maybe
                    YulDSL.YulCatObj.Prelude.Base.Num
                    YulDSL.Effects.Pure
                    YulDSL.Eval
                    YulDSL.CodeGens.YulGen
  other-modules:    YulDSL.CodeGens.Yul.Internal.CodeFormatters
                    YulDSL.CodeGens.Yul.Internal.Variables
                    YulDSL.CodeGens.Yul.Internal.CodeGen
                    YulDSL.CodeGens.Yul.Internal.ABICodecGen
                    YulDSL.CodeGens.Yul.Internal.FunctionGen
                    YulDSL.CodeGens.Yul.Internal.ObjectGen
                    YulDSL.CodeGens.Yul.Internal.BuiltInRegistra
                    YulDSL.CodeGens.Yul.Internal.BuiltIns.Runtime
                    YulDSL.CodeGens.Yul.Internal.BuiltIns.ValueType
                    YulDSL.CodeGens.Yul.Internal.BuiltIns.Arithmetic
                    YulDSL.CodeGens.Yul.Internal.BuiltIns.ABICodec
                    YulDSL.CodeGens.Yul.Internal.BuiltIns
  build-depends:    eth-abi ^>= 0.1.0.0,
                    constraints >= 0.14,
                    bytestring >= 0.11,
                    text >= 2.0.1,
                    containers >= 0.6.7,
                    mtl >= 2.3.1

Test-Suite test-yul-dsl
  import:             basic-options
  default-extensions: BlockArguments
  ghc-options:        -Wno-missing-signatures
  --
  type:             exitcode-stdio-1.0
  build-depends:    QuickCheck >=2.13,
                    hspec >=2.11,
                    eth-abi,
                    yul-dsl
  hs-source-dirs:   test
  other-modules:    TestCommon
                    Fn_prop
                    Eval_prop
  main-is:          Main.hs
