Cabal-Version:  3.0
name:           runyol-__YOL_PKG_NAME__
version:        0.1
build-type:     Simple

common yol-module-options
    default-language:     GHC2024
    default-extensions:   LinearTypes
                          BlockArguments
                          OverloadedStrings
                          UnicodeSyntax
    ghc-options:          -Wall
                          -Wno-name-shadowing
    mixins:               base hiding (Prelude),
                          base (Prelude as Prelude.Base),
                          yul-dsl-linear-smc (Prelude.YulDSL.LinearSMC as Prelude),
                          yul-dsl-linear-smc
    build-depends:        base >= 4.13 && < 666,
                          bytestring >= 0.11,
                          text >= 2.0.2,
                          linear-base >= 0.3.1,
                          linear-smc >= 2.2.3,
                          yul-dsl-linear-smc,
                          yul-dsl,
                          yol-suite

executable runyol
  import:           yol-module-options
  build-depends:    __YOL_PKG_NAME__
  main-is:          RunYol.hs
