Cabal-Version:  3.4
name:           runyol-__YOL_PKG_NAME__
version:        0.1
build-type:     Simple

executable runyol
  default-language: GHC2024
  ghc-options:      -Wall
                    -Wunused-packages
  build-depends:    base >= 4.13 && < 666,
                    text >= 2.0.2,
                    yol-suite,
                    __YOL_PKG_NAME__
  main-is:          RunYol.hs
