Cabal-Version:  3.0
name:           yol-testsuite
version:        0.1
synopsis:       Testsuite for the YOL suite
build-type:     Simple

-- BEGIN yol-module-options
common yol-module-options
    default-language:     GHC2021
    ghc-options:          -Wall
                          -Wno-name-shadowing
    default-extensions:   LinearTypes
                          BlockArguments
                          ImpredicativeTypes
                          OverloadedStrings
                          UnicodeSyntax
                          RebindableSyntax
                          ImplicitPrelude
    mixins:               base hiding (Prelude),
                          base (Prelude as Prelude.Base),
                          yul-dsl-linear-smc (Prelude.YulDSL.LinearSMC as Prelude),
                          yul-dsl-linear-smc
    build-depends:        base >= 4.13 && < 666,
                          text >= 2.0.1,
                          bytestring >= 0.11,
                          yul-dsl,
                          yul-dsl-linear-smc,
                          yol-suite,
                          linear-base >= 0.3.1,
                          linear-smc >= 2.2.3
-- END yol-module-options

library
  import:           yol-module-options
  exposed-modules:  Project
                    ObjectDispatcherTests
  hs-source-dirs:   src
